# School-labs

./: README.md
C/Parallell Proggrammering/: CMakeLists.txt  a.out  forever  test  test.c  test.c.save  test.c.save.1
C/Parallell Proggrammering/.metadata/: version.ini
C/Parallell Proggrammering/exercises/: a.out  hello  hello.c  style.css
C/Parallell Proggrammering/exercises/affinity/: instructions.html
C/Parallell Proggrammering/exercises/false-sharing/: instructions.html
C/Parallell Proggrammering/exercises/hpc2n-batch/: instructions.html
C/Parallell Proggrammering/exercises/hpc2n-intro/: instructions.html
C/Parallell Proggrammering/exercises/hpc2n-module/: instructions.html
C/Parallell Proggrammering/exercises/mpi-intro/: instructions.html
C/Parallell Proggrammering/exercises/openmp-intro/: instructions.html
C/Parallell Proggrammering/exercises/refresh-c-linux/: instructions.html
C/Parallell Proggrammering/exercises/thread-cond/: instructions.html
C/Parallell Proggrammering/exercises/thread-create-join/: instructions.html
C/Parallell Proggrammering/lab1/: CMakeLists.txt
C/Parallell Proggrammering/lab1/code/: .cproject  makefile  queue.c  queue.h  test  test.c  test.c.save  thread-pool.c
C/Parallell Proggrammering/lab2/code/: common.c  image.ppm  mandel-basic  (+2 more)
C/Parallell Proggrammering/lab3/: archive.sh  instructions.html
C/Parallell Proggrammering/lab4/: archive.sh  experiment_1.m  experiment_2.m  experiment_3.m  instructions.html  matlab.m
C/Parallell Proggrammering/openMP/: a.out  test_1.c  test_2.c  test_4.c  test_5.c
(+427 files in other folders)
